# centraldogma-rs

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
examples/: projects.rs
src/: client.rs  lib.rs  main.rs  model.rs  path.rs
src/services/: consts.rs  content.rs  mod.rs  path.rs  project.rs  repository.rs  watch.rs
tests/: content.rs  projects.rs  repo.rs  utils.rs  watch.rs
