[package]
name = "centraldogma"
version = "0.1.0"
authors = ["Hoang Luu <luu.hoang@linecorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
fastrand = "1.4"
form_urlencoded = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
url = "2.1"
futures = "0.3"
log = "0.4"

[dev-dependencies]
futures = "0.3"
