[package]
name = "centraldogma"
version = "0.1.0"
authors = ["Hoang Luu <luu.hoang@linecorp.com>"]
edition = "2018"
description = "CentralDogma client for Rust"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = "1"
fastrand = "1.4"
form_urlencoded = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
url = "2.1"
futures = "0.3"
log = "0.4"

[dev-dependencies]
httpmock = "0.5.5"
